# geojson-cpp

./: .gitignore  CMakeLists.txt  README.md
src/gago/: geojson.h  geometry.h  macros.h
src/gago/geojson/: geojson.cc  geojson.h  geojson_impl.h  rapid_json.h
src/gago/geometry/: feature.h  geometry.h  linestring.h  multi_linestring.h  multi_point.h  multi_polygon.h  point.h  polygon.h  value.h
test/: test.cc
test/data/: feature-collection.json
